# Hair-curve-tool

./: .gitignore  CMakeLists.txt  Maya_curves_to_PLY.py  PLY_to_Maya_Hair.py  README.md  imgui.ini  vcpkg.json
cmake/: UpdateBuildVersion.cmake
src/: App.cpp  App.h  Bvh.cpp  Bvh.h  Camera.cpp  Camera.h  ExportPly.cpp  ExportPly.h  FileDialog.cpp  FileDialog.h  GL.cpp  GL.h  GpuSolver.cpp  GpuSolver.h  HairGuides.cpp  HairGuides.h  ImageLoader.cpp  ImageLoader.h  ImportPly.cpp  ImportPly.h  Log.h  MayaCameraController.cpp  MayaCameraController.h  Mesh.cpp  Mesh.h  MeshDistanceField.cpp  MeshDistanceField.h  Physics.cpp  Physics.h  Raycast.cpp  Raycast.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Serialization.cpp  Serialization.h  UserSettings.cpp  UserSettings.h  main.cpp
src/cuda/: CudaHairSolver.cu  CudaHairSolver.h
